after a lot of stress, symtable works