@@ -9,7 +9,7 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 	private Map<String, Map<String, STentry>> classTable = new HashMap<>();
 	private List<Map<String, STentry>> symTable = new ArrayList<>();
 	private int nestingLevel=0; // current nesting level
-	private int decOffset=-2; // counter for offset of local declarations at current nesting level 
+	private int decOffset=-2; // counter for offset of local declarations at current nesting level
 	int stErrors=0;
 
 	SymbolTableASTVisitor() {}
@@ -18,8 +18,8 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 	private STentry stLookup(String id) {
 		int j = nestingLevel;
 		STentry entry = null;
-		while (j >= 0 && entry == null) 
-			entry = symTable.get(j--).get(id);	
+		while (j >= 0 && entry == null)
+			entry = symTable.get(j--).get(id);
 		return entry;
 	}
 
@@ -40,46 +40,46 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 		visit(n.exp);
 		return null;
 	}
-	
+
 	@Override
 	public Void visitNode(FunNode n) {
 		if (print) printNode(n);
 		Map<String, STentry> hm = symTable.get(nestingLevel);
-		List<TypeNode> parTypes = new ArrayList<>();  
-		for (ParNode par : n.parlist) parTypes.add(par.getType()); 
-		STentry entry = new STentry(nestingLevel, new ArrowTypeNode(parTypes,n.retType),decOffset--);
+		List<TypeNode> parTypes = new ArrayList<>();
+		for (ParNode par : n.parlist) parTypes.add(par.getType());
+		STentry entry = new STentry(nestingLevel, new ArrowTypeNode(parTypes, n.retType), decOffset--);
 		//inserimento di ID nella symtable
 		if (hm.put(n.id, entry) != null) {
 			System.out.println("Fun id " + n.id + " at line "+ n.getLine() +" already declared");
 			stErrors++;
-		} 
+		}
 		//creare una nuova hashmap per la symTable
 		nestingLevel++;
 		Map<String, STentry> hmn = new HashMap<>();
 		symTable.add(hmn);
-		int prevNLDecOffset=decOffset; // stores counter for offset of declarations at previous nesting level 
+		int prevNLDecOffset=decOffset; // stores counter for offset of declarations at previous nesting level
 		decOffset=-2;
-		
+
 		int parOffset=1;
 		for (ParNode par : n.parlist)
-			if (hmn.put(par.id, new STentry(nestingLevel,par.getType(),parOffset++)) != null) {
+			if (hmn.put(par.id, new STentry(nestingLevel, par.getType(), parOffset++)) != null) {
 				System.out.println("Par id " + par.id + " at line "+ n.getLine() +" already declared");
 				stErrors++;
 			}
 		for (Node dec : n.declist) visit(dec);
 		visit(n.exp);
-		//rimuovere la hashmap corrente poiche' esco dallo scope               
+		//rimuovere la hashmap corrente poiche' esco dallo scope
 		symTable.remove(nestingLevel--);
-		decOffset=prevNLDecOffset; // restores counter for offset of declarations at previous nesting level 
+		decOffset=prevNLDecOffset; // restores counter for offset of declarations at previous nesting level
 		return null;
 	}
-	
+
 	@Override
 	public Void visitNode(VarNode n) {
 		if (print) printNode(n);
 		visit(n.exp);
 		Map<String, STentry> hm = symTable.get(nestingLevel);
-		STentry entry = new STentry(nestingLevel,n.getType(), decOffset--);
+		STentry entry = new STentry(nestingLevel, n.getType(), decOffset--);
 		//inserimento di ID nella symtable
 		if (hm.put(n.id, entry) != null) {
 			System.out.println("Var id " + n.id + " at line "+ n.getLine() +" already declared");
@@ -103,7 +103,7 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 		visit(n.el);
 		return null;
 	}
-	
+
 	@Override
 	public Void visitNode(EqualNode n) {
 		if (print) printNode(n);
@@ -143,7 +143,7 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 		visit(n.right);
 		return null;
 	}
-	
+
 	@Override
 	public Void visitNode(PlusNode n) {
 		if (print) printNode(n);
@@ -207,7 +207,7 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 			stErrors++;
 		} else {
 			n.entry = entry;
-			n.nl = nestingLevel;
+			n.nestingLevel = nestingLevel;
 		}
 		return null;
 	}
@@ -228,26 +228,56 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 	public Void visitNode(ClassNode n) {
 		if (print) printNode(n);
 		// new classTypeNode with empty methods and fields
-		final ClassTypeNode classTypeNode = new ClassTypeNode();
-		final STentry entry = new STentry(0, classTypeNode, decOffset--);
-		final Map<String, STentry> virtualTable = new HashMap<>();
-		final Map<String, STentry> currSTMap = symTable.get(0);
+		ClassTypeNode classTypeNode = new ClassTypeNode();
+		STentry entry = new STentry(0, classTypeNode, decOffset--);
+		Map<String, STentry> virtualTable = new HashMap<>();
 		int fieldsOffset = -1;
 		final Set<String> fieldsName = new HashSet<>();
 		final Set<String> methodsName = new HashSet<>();
 
-		if (currSTMap.put(n.id, entry) != null) {
+		if (symTable.getFirst().put(n.id, entry) != null) {
 			System.out.println("Class id " + n.id + " at line " + n.getLine() + " already declared");
 			stErrors++;
+		}
+
+		if (n.superId != null) {
+			STentry superClassEntry = symTable.getFirst().get(n.superId); // Look up superclass in global table
+			if (superClassEntry == null) {
+				System.out.println("Superclass id " + n.superId + " at line " + n.getLine() + " not declared.");
+				stErrors++;
+				// virtualTable remains a new empty HashMap
+			} else if (superClassEntry.type instanceof ClassTypeNode) {
+				Map<String, STentry> superVirtualTable = classTable.get(n.superId);
+				if (superVirtualTable != null) {
+					virtualTable = new HashMap<>(superVirtualTable); // Create a copy
+					for (String id : superVirtualTable.keySet()) {
+						if (superVirtualTable.get(id).type instanceof ArrowTypeNode) {
+							classTypeNode.methods.add((ArrowTypeNode) superVirtualTable.get(id).type);
+						} else {
+							classTypeNode.fields.add( superVirtualTable.get(id).type);
+						}
+					}
+				} else {
+					// This indicates an earlier issue if a declared class doesn't have its VT in classTable
+					System.out.println("Internal error: Superclass " + n.superId + " virtual table not found in classTable at line " + n.getLine());
+					stErrors++;
+					// virtualTable remains a new empty HashMap
+				}
+			} else {
+				System.out.println("Superclass id " + n.superId + " at line " + n.getLine() + " is not a class type.");
+				stErrors++;
+				// virtualTable remains a new empty HashMap
+			}
 		}
 
 		classTable.put(n.id, virtualTable);
 		symTable.add(virtualTable);
 		nestingLevel++;
 
+
 		for (FieldNode field : n.fields) {
 			if (fieldsName.contains(field.id)) {
-				System.out.println("Field id " + field.id + " at line " + n.getLine() + " already declared");
+				System.out.println("Field " + field.id + " at line " + n.getLine() + " already declared");
 				stErrors++;
 			} else {
 				fieldsName.add(field.id);
@@ -257,6 +287,8 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 			classTypeNode.fields.add(-fieldEntry.offset - 1, fieldEntry.type);
 			virtualTable.put(field.id, fieldEntry);
 		}
+
+
 
 
 		int prevOffset = decOffset;
@@ -270,8 +302,8 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 				methodsName.add(method.id);
 			}
 			visit(method);
-			ArrowTypeNode methodTypeNode = (ArrowTypeNode) symTable.get(nestingLevel).get(method.id).type;
-			classTypeNode.methods.add(method.offset, methodTypeNode);
+			ArrowTypeNode methodType = (ArrowTypeNode) symTable.get(nestingLevel).get(method.id).type;
+			classTypeNode.methods.add(method.offset, methodType);
 		}
 		decOffset = prevOffset;
 		symTable.remove(nestingLevel--);
@@ -290,12 +322,9 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 		Map<String, STentry> hm = symTable.get(nestingLevel);
 		List<TypeNode> parTypes = new ArrayList<>();
 		for (ParNode par : n.parlist) parTypes.add(par.getType());
-		STentry entry = new STentry(nestingLevel, new ArrowTypeNode(parTypes,n.retType), decOffset--);
+		STentry entry = new STentry(nestingLevel, new ArrowTypeNode(parTypes,n.retType), decOffset++);
 		//inserimento di ID nella symtable
-		if (hm.put(n.id, entry) != null) {
-			System.out.println("Method id " + n.id + " at line " + n.getLine() + " already declared");
-			stErrors++;
-		}
+		hm.put(n.id, entry);
 		//creare una nuova hashmap per la symTable
 		nestingLevel++;
 		Map<String, STentry> hmn = new HashMap<>();
@@ -305,13 +334,13 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 
 		int parOffset=1;
 		for ( ParNode par : n.parlist )
-			if ( hmn.put(par.id, new STentry(nestingLevel,par.getType(),parOffset++)) != null ) {
+			if ( hmn.put(par.id, new STentry(nestingLevel, par.getType(), parOffset++)) != null ) {
 				System.out.println("Par id " + par.id + " at line "+ n.getLine() +" already declared");
 				stErrors++;
 			}
 		for ( Node dec : n.declist ) visit( dec );
 		visit( n.exp );
-		//rimuovere la hashmap corrente poiche' esco dallo scope
+		//rimuove la hashmap corrente => esco dallo scope
 		symTable.remove( nestingLevel-- );
 		decOffset = prevNLDecOffset; // restores counter for offset of declarations at previous nesting level
 		return null;
@@ -320,46 +349,69 @@ public class SymbolTableASTVisitor extends BaseASTVisitor<Void,VoidException> {
 	@Override
 	public Void visitNode(ClassCallNode n) {
 		if (print) printNode(n);
-		final STentry entry = stLookup(n.classId);
+
+		STentry entry = stLookup(n.classId);
+
 		if (entry == null) {
-			System.out.println("TODO this " + n.classId + " at line " + n.getLine());
+			System.out.println("Class id  " + n.classId + " at line " + n.getLine() + " not declared");
 			stErrors++;
-		} else if (!(entry.type instanceof RefTypeNode)){
-			System.out.println("Object id " + n.classId + " at line " + n.getLine() + " is not a class");
-			stErrors++;
+			return null;
 		} else {
 			n.entry = entry;
-			n.methodOffset = nestingLevel;
-			Map<String, STentry> virtualTable = classTable.get(((RefTypeNode) entry.type).className);
-			if (virtualTable.containsKey(n.methodId)){
-				n.methodEntry = virtualTable.get(n.methodId);
-			} else {
-				System.out.println("Object " + n.classId + " has no method " + n.methodId + " at line " + n.getLine());
-				stErrors++;
-			}
+			n.nestingLevel = nestingLevel;
 		}
 
-		for (Node arg : n.argList) {
-			visit(arg);
+		RefTypeNode ref;
+		if (!(entry.type instanceof RefTypeNode)) {
+			System.out.println(n.classId + " at line " + n.getLine() + " is not a class");
+			stErrors++;
+			return null;
+		}
+		ref = (RefTypeNode) entry.type;
+
+
+		Map<String, STentry> virtualTable = classTable.get(ref.className);
+
+
+
+		STentry methodEntry = virtualTable.get(n.methodId);
+		if (methodEntry == null) {
+			System.out.println("Method id " + n.classId + " at line " + n.getLine() + " not declared in class " + ref.className);
+			stErrors++;
+			return null;
 		}
 
+		n.methodEntry = methodEntry;
+
+		for (Node arg : n.argList) visit(arg);
 		return null;
 	}
 
 	@Override
 	public Void visitNode(NewNode n) {
 		if (print) printNode(n);
-		if (!classTable.containsKey(n.classId)) {
+
+
+		// Retrieve the STentry of the class ID from the class table
+		Map<String, STentry> virtualTable = classTable.get(n.classId);
+		if (virtualTable == null) {
 			System.out.println("Class id " + n.classId + " at line " + n.getLine() + " not declared");
 			stErrors++;
+			return null;
 		}
 
-		n.entry = symTable.getFirst().get(n.classId);
+		// Retrieve the STentry from level 0 of the symbol table
+		STentry classEntry = symTable.get(0).get(n.classId);
+		if (classEntry == null) {
+			System.out.println("Class " + n.classId + " at line " + n.getLine() + " not found in symbol table");
+			stErrors++;
+			return null;
+		}else {
+			n.entry = classEntry;
+		}
 
-		for (Node arg : n.argList) {
+		for (Node arg : n.argList)
 			visit(arg);
-		}
-
 		return null;
 	}
 
